--- a/src/test/resources/checks/EscapeOutputCheck.phtml
+++ b/src/test/resources/checks/EscapeOutputCheck.phtml
@@ -1,6 +1,6 @@
 <div>
-    <?= __('Text to translate') // Noncompliant {{Escape output for display.}} ?>
-    <?php echo $customer->getName() // Noncompliant {{Escape output for display.}} ?>
+    <?= __('Text to translate') // Noncompliant {{Unescaped output detected.}} ?>
+    <?php echo $customer->getName() // Noncompliant {{Unescaped output detected.}} ?>
 
     <?= $escaper->escapeHtml(__('Text to translate')) // Compliant ?>
     <?= $block->getChildBlock('test')->toHtml() // Compliant ?>
@@ -14,6 +14,6 @@
             ) ?>
     <?= $test
         ? '123'
-        : $block->getSomeInfo() // Noncompliant {{Escape output for display.}}
+        : $block->getSomeInfo() // Noncompliant {{Unescaped output detected.}}
     ?>
 </div>
